# Mandelbrot-Walker

./: CMakeLists.txt  README.md  color_list  config  config.h  explorer.c  explorer.h  main.c
colors/: colors.c  colors.h
mandelbrot/: mandelbrot.c  mandelbrot.h
ocl_kernels/: mandelbrot.cl
openCL_driver/: openCL_driver.c  openCL_driver.h
